<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginContraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/photo_skate_login"
    tools:context=".app.login.LoginActivity">

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="12dp"
        android:autoText="true"
        android:autofillHints=""
        android:background="@drawable/background_edit"
        android:elevation="4dp"
        android:ems="10"
        android:fontFamily="@font/archivonarrow_medium"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/negro"
        android:textColorHighlight="#90F2C12E"
        android:textColorHint="@color/negro"
        android:textColorLink="@color/negro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="Deprecated,DuplicateSpeakableTextCheck,HardcodedText,TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="164dp"
        android:layout_height="141dp"
        android:layout_marginStart="-15dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/des"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-15dp"
        android:fontFamily="@font/archivoblack_regular"
        android:gravity="top"
        android:text="@string/nombre"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/amarillo"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        tools:ignore="TextSizeCheck" />

    <CheckBox
        android:id="@+id/login_cheak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/archivonarrow_medium"
        android:shadowColor="@color/amarillo"
        android:text="@string/recordar_usuario"
        android:textColor="@color/amarillo"
        android:textColorHighlight="@color/amarillo"
        android:textColorHint="@color/amarillo"
        android:textColorLink="@color/amarillo"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/login_password"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="171dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/background_btn_green"
        android:backgroundTint="@color/amarillo"
        android:fontFamily="@font/archivoblack_regular"
        android:text="@string/login"
        android:textColor="@color/negro"
        android:textColorHint="@color/amarillo"
        android:textSize="20sp"
        app:iconTint="@color/negro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:rippleColor="@color/amarillo"
        tools:ignore="VisualLintBounds,TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/no_tienes_cuenta"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/login_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="-10dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/registrate"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        tools:ignore="VisualLintBounds" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_olvido" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/background_edit"
        android:elevation="4dp"
        android:ems="10"
        android:fontFamily="@font/archivonarrow_medium"
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/negro"
        android:textColorHighlight="#C4F2C12E"
        android:textColorHint="@color/negro"
        android:textColorLink="@color/amarillo"
        app:layout_constraintEnd_toEndOf="@+id/login_email"
        app:layout_constraintStart_toStartOf="@+id/login_email"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        tools:ignore="Autofill,HardcodedText,SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/login_olvido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/archivonarrow_semibold"
        android:text="Olvide mi contraseña!"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/login_cheak"
        app:layout_constraintStart_toStartOf="@+id/login_cheak"
        app:layout_constraintTop_toBottomOf="@+id/login_cheak"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>